# squiz

./: .clang-format  CMakeLists.txt  LICENSE  README.md
documentation/: CMakeLists.txt
include/squiz/: child_operation.hpp  completion_signatures.hpp  concepts.hpp  cond.hpp  counting_scope.hpp  empty_env.hpp  first_successful.hpp  inlinable_operation_state.hpp  inline_scheduler.hpp  just.hpp  let_value.hpp  manual_child_operation.hpp  manual_event_loop.hpp  operation_state.hpp  overload.hpp  parameter_type.hpp  queryable.hpp  receiver.hpp  request_stop.hpp  scheduler.hpp  sender.hpp  single_inplace_stop_token.hpp  source_tag.hpp  statement.hpp  stop_possible.hpp  stop_token_sender.hpp  stop_when.hpp  stoppable_token.hpp  sync_wait.hpp  then.hpp  unstoppable.hpp  variant_child_operation.hpp  variant_sender.hpp  when_all.hpp
include/squiz/detail/: add_error_if_move_can_throw.hpp  allocate_unique.hpp  atomic_intrusive_queue.hpp  binned_time_priority_queue.hpp  bitset.hpp  completion_signature_to_tuple.hpp  completion_signatures_to_variant_of_tuple.hpp  connect_at.hpp  deliver_result.hpp  dispatch_index.hpp  env_with_stop_possible.hpp  index_of.hpp  integer_ops.hpp  intrusive_list.hpp  intrusive_queue.hpp  intrusive_stack.hpp  member_type.hpp  merge_completion_signatures.hpp  set_value_signature.hpp  smallest_unsigned_integer.hpp  stop_callback_type.hpp  store_result.hpp
include/squiz/linuxos/: io_uring.hpp  iouring_context.hpp  monotonic_clock.hpp
include/squiz/linuxos/detail/: file_handle.hpp  mmap_region.hpp
source/: manual_event_loop.cpp  single_inplace_stop_token.cpp
source/linux/: file_handle.cpp  io_uring.cpp  iouring_context.cpp  iouring_context.hpp  mmap_region.cpp  monotonic_clock.cpp
test/: CMakeLists.txt
test/source/: binned_time_priority_queue.cpp  cond.cpp  counting_scope.cpp  dummy.cpp  first_successful.cpp  inline_scheduler.cpp  just.cpp  let_value.cpp  manual_event_loop.cpp  statement.cpp  stop_token_sender.cpp  stop_when.cpp  sync_wait.cpp  then.cpp  unstoppable.cpp  when_all.cpp
test/source/linux/: iouring_context.cpp
